272 - Fix deserialization issues